--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pm2": "^2.4.6"
   },
   "dependencies": {
+    "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "jade": "^1.11.0",
     "mongoose": "^4.10.2"
